<resources>
    <string name="app_name" translatable="false">Sweet IPFS</string>
    <string name="console_hint" translatable="false">name publish Qm…</string>
    <string name="menu_config">Config</string>
    <string name="menu_action">Action</string>
    <string name="menu_info">Info</string>
    <string name="console_hello">Connected! Type  a command or navigate the menus :)</string>
    <string name="tap_to_switch">Tap to switch</string>
    <string name="select_to_show_actions">Select to show actions</string>
    <string name="browser_show">Show</string>
    <string name="menu_add_file">Add file</string>
    <string name="menu_add_folder">Add folder</string>
    <string name="menu_add_text">Add text</string>
    <string name="menu_garbage_collect">Garbage collect</string>
    <string name="title_add_file">Add file to IPFS</string>
    <string name="garbage_collected">Successfully collected objects</string>
    <string name="menu_pins">Pins management</string>
    <string name="menu_keys">Keys management</string>
    <string name="menu_pubsub" translatable="false">Pub/Sub</string>
    <string name="menu_swarm" translatable="false">Swarm</string>
    <string name="menu_swarm_connect">Connect to</string>
    <string name="menu_swarm_disconnect">Disconnect from</string>
    <string name="menu_dht" translatable="false">DHT</string>
    <string name="menu_dht_findpeer">Find peer</string>
    <string name="menu_dht_findprovs">Find provs</string>
    <string name="menu_dht_query">Query</string>
    <string name="menu_identity">Identity</string>
    <string name="menu_identity_peerid">Peer ID</string>
    <string name="title_peerid">Peer ID</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="menu_identity_privatekey">Private Key</string>
    <string name="title_privatekey">Private Key</string>
    <string name="menu_peers">Peers</string>
    <string name="menu_others">Others</string>
    <string name="title_others">Others infos</string>
    <string name="others_goipfs_version">IPFS version</string>
    <string name="others_api_address">API address</string>
    <string name="others_gateway_address">Gateway address</string>
    <string name="menu_bootstrap" translatable="false">Bootstrap</string>
    <string name="menu_gateway">Gateway</string>
    <string name="menu_gateway_writable">Writable gateway</string>
    <string name="menu_api">API</string>
    <string name="menu_api_headers">Headers</string>
    <string name="menu_api_headers_origins">Origins</string>
    <string name="title_api_headers_origin">Allowed API origins</string>
    <string name="menu_reprovider">Reprovider</string>
    <string name="menu_reprovider_interval">Interval</string>
    <string name="menu_reprovider_strategy">Strategy</string>
    <string name="menu_experimental">Experimental</string>
    <string name="menu_experimental_filestore">Filestore</string>
    <string name="menu_experimental_urlstore">URL Store</string>
    <string name="menu_experimental_sharding">Sharding</string>
    <string name="menu_experimental_libp2p_stream_mounting" translatable="false">LibP2P Stream Mounting</string>
    <string name="daemon_unsupported_arch">Unsupported architecture</string>
    <string name="daemon_installing">Installing…</string>
    <string name="daemon_init">Initializing…</string>
    <string name="daemon_starting">Starting…</string>
    <string name="notif_title">IPFS Daemon</string>
    <string name="notif_msg">Your IPFS node is running in foreground</string>
    <string name="stop">Stop</string>
    <string name="browser_title">IPFS Browser</string>
    <string name="browser_not_ipxs">Could not find any IPFS resource there</string>
    <string name="share_action_not_supported">This action is not supported</string>
    <string name="daemon_not_running">Daemon not running</string>
    <string name="start">Start</string>
    <string name="share_cannot_open">Could not open this resource</string>
    <string name="share_wrap">Wrap in directory?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_error">An error occurred while adding your file</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="title_add_folder">Add folder to IPFS</string>
    <string name="title_add_text">Add text to IPFS</string>
    <string name="browse_on_ipfs">Browse on IPFS</string>
    <string name="error_title">An error occured</string>
    <string name="menu_swarm_key">Swarm key</string>
    <string name="never">Never</string>
    <string name="not_impl">This feature is not yet implemented, sorry</string>
    <string name="review_msg">Give us your feedback !</string>
    <string name="review_title">May you review the app?</string>
    <string name="share_btn_export">Export</string>
    <string name="share_btn_pin">Pin</string>
    <string name="share_btn_publish">Publish</string>
    <string name="share_btn_unpin">Unpin</string>
    <string name="share_on_ipfs">Share on IPFS</string>
    <string name="title_action_pins">%d pins</string>
    <string name="loading">Loading…</string>
    <string name="ask_open_hash">Do you want to open this hash?</string>
    <string name="title_info_peers">%d peers</string>
    <string name="title_add_key">New key</string>
    <string name="key_delete_confirm">Are you sure you want to delete this key?</string>
    <string name="delete">Delete</string>
    <string name="connecting">Connecting…</string>
    <string name="publishing">Publishing… Please be patient…</string>
    <string name="publish_confirm">Are you sure you want to publish to %s?</string>
    <string name="menu_experimental_p2phttpproxy">P2P-HTTP Proxy</string>
    <string name="menu_experimental_quic" translatable="false">QUIC</string>
    <string name="exported">Exported to %s</string>
    <string name="filename">File name</string>
    <string name="menu_action_open_clipboard">Open from clipboard</string>
    <string name="menu_action_open_file">Open from file</string>
    <string name="open">Open</string>
    <string name="_new">New</string>
    <string name="name">Name</string>
    <string name="notif_low_power">Low power</string>
    <string name="notif_high_power">High power</string>
    <string name="menu_config_args">Arguments</string>
    <string name="err_file_not_ipfs">File is not a .ipfs/.ipns</string>
    <string name="err_not_a_hash">%s is not a valid multihash</string>
    <string name="err_no_data">Could not find data</string>
    <string name="menu_gateway_public">Public gateway</string>
    <string name="peer_disconnect">Disconnect</string>
    <string name="peer_connect">Connect</string>
    <string name="menu_gateway_public_hint">You can choose your favourite public gateway for QR codes and links</string>
    <string name="menu_bootstrap_hint">You node will connect to these addresses on start</string>
    <string name="main_progress">Boarding in progress</string>
    <string name="main_message">Let\'s go to the moon!</string>
    <string name="settings">Settings</string>
    <string name="main_settings_init_args">Init arguments</string>
    <string name="main_settings_start_args">Start arguments</string>
    <string name="main_settings_delete_storage">Delete storage</string>
    <string name="main_settings_delete_storage_confirmation">Are you sure you want to delete all your IPFS data?</string>
</resources>
